changed style of the "add comment" link

--- a/wikiedu/media/sass/extra.scss
+++ b/wikiedu/media/sass/extra.scss
@@ -604,6 +604,23 @@ input[type="submit"].link {
             min-height: 46px;
         }
     }
+    .comments .controls a {
+        background: none;
+        color: $dark-text-color;
+        padding-left: 0;
+        &:before {
+            display: inline-block;
+            font: normal normal normal 14px/1 FontAwesome;
+            font-size: inherit;
+            text-rendering: auto;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            transform: translate(0, 0);
+            content: '\f112';
+            padding-right: 5px;
+        }
+    }
+
 }
 
 .custom-header,
