--- a/wikiedu/media/style/extra.css
+++ b/wikiedu/media/style/extra.css
@@ -248,8 +248,20 @@ body.legacy-post {
   color: #dadada;
   line-height: 40px;
 }
+/* line 227, ../sass/extra.scss */
+#userToolsNav #signin-form input {
+  color: #dadada !important;
+  text-decoration: underline !important;
+  border: none;
+  padding: 0;
+  margin-top: -1px;
+}
+/* line 233, ../sass/extra.scss */
+#userToolsNav #signin-form input:hover {
+  color: #ebff88 !important;
+}
 
-/* line 228, ../sass/extra.scss */
+/* line 238, ../sass/extra.scss */
 #metaNav {
   height: 40px;
   line-height: 40px;
@@ -257,7 +269,7 @@ body.legacy-post {
   margin: 0 -8px 0 0;
   right: 0;
 }
-/* line 235, ../sass/extra.scss */
+/* line 245, ../sass/extra.scss */
 #metaNav a {
   color: #dadada;
   display: inline-block !important;
@@ -265,13 +277,13 @@ body.legacy-post {
   line-height: 40px !important;
   height: 40px !important;
 }
-/* line 243, ../sass/extra.scss */
+/* line 253, ../sass/extra.scss */
 #metaNav a.on {
   font-weight: normal;
   color: white;
   background: #868daa !important;
 }
-/* line 249, ../sass/extra.scss */
+/* line 259, ../sass/extra.scss */
 #metaNav a.moderation-items-count {
   display: inline-block;
   vertical-align: middle;
@@ -294,11 +306,11 @@ body.legacy-post {
   min-width: 12px !important;
   text-align: center;
 }
-/* line 262, ../sass/extra.scss */
+/* line 272, ../sass/extra.scss */
 #metaNav a.moderation-items-count:hover {
   text-decoration: none;
 }
-/* line 267, ../sass/extra.scss */
+/* line 277, ../sass/extra.scss */
 #metaNav #navTags,
 #metaNav #navBadges,
 #metaNav #navUsers,
@@ -308,7 +320,7 @@ body.legacy-post {
   padding: 0 10px;
   margin: 0 0 0 30px;
 }
-/* line 277, ../sass/extra.scss */
+/* line 287, ../sass/extra.scss */
 #metaNav .dropdown,
 #metaNav a {
   display: inline;
@@ -316,19 +328,19 @@ body.legacy-post {
   height: 34px;
   line-height: 34px;
 }
-/* line 284, ../sass/extra.scss */
+/* line 294, ../sass/extra.scss */
 #metaNav span.dropdown-toggle {
   padding: 10px;
   border-left: 1px solid #868daa;
   /*background: url(../images/sprites.png) no-repeat -7px -242px;*/
   position: relative;
 }
-/* line 290, ../sass/extra.scss */
+/* line 300, ../sass/extra.scss */
 #metaNav span.dropdown-toggle:hover {
   background: #868daa;
   /*background: url(../images/sprites.png) no-repeat -7px -274px;*/
 }
-/* line 293, ../sass/extra.scss */
+/* line 303, ../sass/extra.scss */
 #metaNav span.dropdown-toggle:hover .dropdown-menu {
   background: #868daa;
   border-left: 1px solid #868daa;
@@ -337,58 +349,58 @@ body.legacy-post {
   padding: 4px 0 10px 0;
   top: 36px;
 }
-/* line 302, ../sass/extra.scss */
+/* line 312, ../sass/extra.scss */
 #metaNav .dropdown-menu {
   background: #868daa;
   left: 26px;
   top: 22px;
 }
-/* line 306, ../sass/extra.scss */
+/* line 316, ../sass/extra.scss */
 #metaNav .dropdown-menu li {
   line-height: 1.7;
   padding: 0 0 0 13px;
   margin: 0;
 }
-/* line 310, ../sass/extra.scss */
+/* line 320, ../sass/extra.scss */
 #metaNav .dropdown-menu li img {
   margin-bottom: 3px;
 }
-/* line 314, ../sass/extra.scss */
+/* line 324, ../sass/extra.scss */
 #metaNav .dropdown-menu li:hover {
   background: white !important;
 }
-/* line 317, ../sass/extra.scss */
+/* line 327, ../sass/extra.scss */
 #metaNav .dropdown-menu a {
   margin: 0;
   padding: 0;
 }
-/* line 321, ../sass/extra.scss */
+/* line 331, ../sass/extra.scss */
 #metaNav .dropdown-menu a:hover {
   background: inherit;
   text-decoration: none;
 }
 
-/* line 328, ../sass/extra.scss */
+/* line 338, ../sass/extra.scss */
 #secondaryHeader {
   background: #868daa;
   border: none;
   margin-bottom: 7px;
 }
 
-/* line 334, ../sass/extra.scss */
+/* line 344, ../sass/extra.scss */
 .lang-nav {
   background: #4c4c4c;
   font-size: 16px;
   line-height: 16px;
   height: 16px;
 }
-/* line 339, ../sass/extra.scss */
+/* line 349, ../sass/extra.scss */
 .lang-nav .dropdown-menu {
   background: #4c4c4c;
   min-width: auto !important;
   top: 20px;
 }
-/* line 344, ../sass/extra.scss */
+/* line 354, ../sass/extra.scss */
 .lang-nav a {
   background: #4c4c4c;
   height: 18px !important;
@@ -396,14 +408,14 @@ body.legacy-post {
   text-decoration: none !important;
 }
 
-/* line 351, ../sass/extra.scss */
+/* line 361, ../sass/extra.scss */
 .scope-selector {
   color: #e1e1e1;
   font-size: 16px;
   height: 37px;
   position: relative;
 }
-/* line 356, ../sass/extra.scss */
+/* line 366, ../sass/extra.scss */
 .scope-selector.on, .scope-selector:hover {
   background: none;
   text-decoration: none;
@@ -412,15 +424,15 @@ body.legacy-post {
   -webkit-transition: 0.07s, ease;
   transition: 0.07s, ease;
 }
-/* line 362, ../sass/extra.scss */
+/* line 372, ../sass/extra.scss */
 .scope-selector:hover {
   color: white;
 }
-/* line 365, ../sass/extra.scss */
+/* line 375, ../sass/extra.scss */
 .scope-selector:first-child {
   margin-left: 0;
 }
-/* line 368, ../sass/extra.scss */
+/* line 378, ../sass/extra.scss */
 .scope-selector.on:before {
   color: white;
   display: inline-block;
@@ -436,29 +448,29 @@ body.legacy-post {
   content: '\f0d8';
 }
 
-/* line 383, ../sass/extra.scss */
+/* line 393, ../sass/extra.scss */
 #homeButton {
   width: 30px;
   margin: 0 20px 0 3px;
   border: none;
 }
-/* line 387, ../sass/extra.scss */
+/* line 397, ../sass/extra.scss */
 #homeButton:hover {
   -moz-transition: 0.07s, ease;
   -o-transition: 0.07s, ease;
   -webkit-transition: 0.07s, ease;
   transition: 0.07s, ease;
 }
-/* line 390, ../sass/extra.scss */
+/* line 400, ../sass/extra.scss */
 #homeButton i {
   color: #e1e1e1;
 }
-/* line 392, ../sass/extra.scss */
+/* line 402, ../sass/extra.scss */
 #homeButton i:hover {
   color: white;
 }
 
-/* line 397, ../sass/extra.scss */
+/* line 407, ../sass/extra.scss */
 #askButton {
   font-size: 18px;
   height: 42px;
@@ -469,30 +481,30 @@ body.legacy-post {
   text-transform: capitalize;
 }
 
-/* line 406, ../sass/extra.scss */
+/* line 416, ../sass/extra.scss */
 #logo img {
   height: 56px;
   margin-left: -10px;
 }
 
-/* line 410, ../sass/extra.scss */
+/* line 420, ../sass/extra.scss */
 #searchBar {
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
   border: none;
 }
-/* line 413, ../sass/extra.scss */
+/* line 423, ../sass/extra.scss */
 #searchBar input.searchInput {
   font-family: Georgia, serif;
   font-style: italic;
 }
 
-/* line 419, ../sass/extra.scss */
+/* line 429, ../sass/extra.scss */
 .search-drop-menu .footer {
   padding-top: 12px;
 }
-/* line 421, ../sass/extra.scss */
+/* line 431, ../sass/extra.scss */
 .search-drop-menu .footer button {
   padding: 2px 6px 3px;
   background: #868daa;
@@ -506,7 +518,7 @@ body.legacy-post {
   box-shadow: none;
   text-shadow: none;
 }
-/* line 432, ../sass/extra.scss */
+/* line 442, ../sass/extra.scss */
 .search-drop-menu.empty .footer {
   border-top: none;
   padding-top: 9px;
@@ -515,16 +527,16 @@ body.legacy-post {
   box-shadow: none;
 }
 
-/* line 439, ../sass/extra.scss */
+/* line 449, ../sass/extra.scss */
 #ContentRight {
   margin-bottom: 56px;
 }
 
-/* line 443, ../sass/extra.scss */
+/* line 453, ../sass/extra.scss */
 .box {
   color: #787878;
 }
-/* line 445, ../sass/extra.scss */
+/* line 455, ../sass/extra.scss */
 .box h2,
 .box .contributorback {
   background: #f5f5f5;
@@ -533,7 +545,7 @@ body.legacy-post {
   padding: 0 10px 0 0;
   text-align: right;
 }
-/* line 454, ../sass/extra.scss */
+/* line 464, ../sass/extra.scss */
 .box .inputs #interestingTagInput,
 .box .inputs #ignoredTagInput,
 .box .inputs #subscribedTagInput,
@@ -542,7 +554,7 @@ body.legacy-post {
   height: 24px;
   line-height: 24px;
 }
-/* line 462, ../sass/extra.scss */
+/* line 472, ../sass/extra.scss */
 .box .inputs #interestingTagAdd,
 .box .inputs #subscribedTagAdd,
 .box .inputs #ignoredTagAdd,
@@ -551,7 +563,7 @@ body.legacy-post {
   margin: 0;
 }
 
-/* line 472, ../sass/extra.scss */
+/* line 482, ../sass/extra.scss */
 input[type="submit"].searchBtn,
 input.cancelSearchBtn {
   border: 0;
@@ -562,7 +574,7 @@ input.cancelSearchBtn {
   right: -500px;
 }
 
-/* line 481, ../sass/extra.scss */
+/* line 491, ../sass/extra.scss */
 #searchBar input[type="button"].cancelSearchBtn {
   background: transparent !important;
   border: none !important;
@@ -573,7 +585,7 @@ input.cancelSearchBtn {
   top: 4px;
 }
 
-/* line 490, ../sass/extra.scss */
+/* line 500, ../sass/extra.scss */
 button,
 input[type="submit"],
 input[type="button"],
@@ -597,7 +609,7 @@ input[type="reset"],
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-/* line 507, ../sass/extra.scss */
+/* line 517, ../sass/extra.scss */
 button:hover,
 input[type="submit"]:hover,
 input[type="button"]:hover,
@@ -608,46 +620,46 @@ input[type="reset"]:hover,
   text-shadow: none;
 }
 
-/* line 515, ../sass/extra.scss */
+/* line 525, ../sass/extra.scss */
 .comments input[type="submit"],
 .comments .controls a.button {
   color: #4b4b4b !important;
   border: none !important;
 }
-/* line 519, ../sass/extra.scss */
+/* line 529, ../sass/extra.scss */
 .comments input[type="submit"]:hover,
 .comments .controls a.button:hover {
   text-decoration: underline;
 }
-/* line 523, ../sass/extra.scss */
+/* line 533, ../sass/extra.scss */
 .comments input[type="submit"] {
   color: #1b71bd;
 }
 
-/* line 527, ../sass/extra.scss */
+/* line 537, ../sass/extra.scss */
 input[type="submit"].link {
   border: none !important;
   color: 4b4b4b !important;
 }
 
-/* line 532, ../sass/extra.scss */
+/* line 542, ../sass/extra.scss */
 #footer {
   margin-top: 10px;
 }
-/* line 534, ../sass/extra.scss */
+/* line 544, ../sass/extra.scss */
 #footer .span-4,
 #footer .span-8 {
   margin: 0;
 }
-/* line 538, ../sass/extra.scss */
+/* line 548, ../sass/extra.scss */
 #footer .span-4 {
   width: 17%;
 }
-/* line 541, ../sass/extra.scss */
+/* line 551, ../sass/extra.scss */
 #footer .span-8 {
   width: 32%;
 }
-/* line 544, ../sass/extra.scss */
+/* line 554, ../sass/extra.scss */
 #footer a,
 #footer a:active,
 #footer a:hover,
@@ -657,65 +669,65 @@ input[type="submit"].link {
   font-size: 12px;
   line-height: 18px;
 }
-/* line 553, ../sass/extra.scss */
+/* line 563, ../sass/extra.scss */
 #footer p {
   margin-top: 14px;
 }
-/* line 556, ../sass/extra.scss */
+/* line 566, ../sass/extra.scss */
 #footer h3 {
   color: #de0000;
   font-size: 16px;
   margin: 0 0 8px 0;
   padding: 0;
 }
-/* line 562, ../sass/extra.scss */
+/* line 572, ../sass/extra.scss */
 #footer ul {
   list-style: none;
   margin: 0;
 }
-/* line 566, ../sass/extra.scss */
+/* line 576, ../sass/extra.scss */
 #footer textarea {
   display: block;
   margin: 12px 0 10px;
   width: 80%;
 }
 
-/* line 572, ../sass/extra.scss */
+/* line 582, ../sass/extra.scss */
 .pager,
 .paginator {
   margin-bottom: 0;
   padding-bottom: 0;
 }
 
-/* line 579, ../sass/extra.scss */
+/* line 589, ../sass/extra.scss */
 .question-page div.comments.empty {
   margin-top: -14px;
 }
-/* line 582, ../sass/extra.scss */
+/* line 592, ../sass/extra.scss */
 .question-page .answered-by-owner,
 .question-page .accepted-answer {
   background: white;
 }
-/* line 585, ../sass/extra.scss */
+/* line 595, ../sass/extra.scss */
 .question-page .answered-by-owner .comments,
 .question-page .accepted-answer .comments {
   background: white;
 }
-/* line 589, ../sass/extra.scss */
+/* line 599, ../sass/extra.scss */
 .question-page .comments .comment-body {
   font-size: 14px;
   max-width: 650px;
 }
-/* line 592, ../sass/extra.scss */
+/* line 602, ../sass/extra.scss */
 .question-page .comments .comment-body p {
   font-size: 14px;
 }
-/* line 596, ../sass/extra.scss */
+/* line 606, ../sass/extra.scss */
 .question-page .post-update-info-container {
   float: right;
   width: auto;
 }
-/* line 599, ../sass/extra.scss */
+/* line 609, ../sass/extra.scss */
 .question-page .post-update-info-container .post-update-info {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
@@ -727,13 +739,13 @@ input[type="submit"].link {
   float: none;
   min-height: 46px;
 }
-/* line 607, ../sass/extra.scss */
+/* line 617, ../sass/extra.scss */
 .question-page .comments .controls a {
   background: none;
   color: #848daa;
   padding-left: 0;
 }
-/* line 611, ../sass/extra.scss */
+/* line 621, ../sass/extra.scss */
 .question-page .comments .controls a:before {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
@@ -746,12 +758,12 @@ input[type="submit"].link {
   padding-right: 5px;
 }
 
-/* line 626, ../sass/extra.scss */
+/* line 636, ../sass/extra.scss */
 .custom-header,
 .openid-signin .custom-header {
   background: #4c4c4c;
 }
-/* line 629, ../sass/extra.scss */
+/* line 639, ../sass/extra.scss */
 .custom-header a,
 .custom-header a:hover,
 .custom-header a:visited,
@@ -760,18 +772,18 @@ input[type="submit"].link {
 .openid-signin .custom-header a:visited {
   color: orange;
 }
-/* line 634, ../sass/extra.scss */
+/* line 644, ../sass/extra.scss */
 .custom-header p,
 .openid-signin .custom-header p {
   color: #868daa;
   margin: 0 0 6px;
 }
-/* line 637, ../sass/extra.scss */
+/* line 647, ../sass/extra.scss */
 .custom-header p:last-child,
 .openid-signin .custom-header p:last-child {
   margin: 0;
 }
-/* line 641, ../sass/extra.scss */
+/* line 651, ../sass/extra.scss */
 .custom-header .content-wrapper,
 .openid-signin .custom-header .content-wrapper {
   padding: 8px;
@@ -780,7 +792,7 @@ input[type="submit"].link {
   border-radius: 6px;
 }
 
-/* line 649, ../sass/extra.scss */
+/* line 659, ../sass/extra.scss */
 .flat-page #ContentFull img {
   border: 1px solid #aaa;
   margin: 6px 0;
@@ -791,27 +803,27 @@ input[type="submit"].link {
   -webkit-box-shadow: 0 0 14px #ccc;
   box-shadow: 0 0 14px #ccc;
 }
-/* line 656, ../sass/extra.scss */
+/* line 666, ../sass/extra.scss */
 .flat-page li {
   margin-bottom: 20px;
 }
 
-/* line 661, ../sass/extra.scss */
+/* line 671, ../sass/extra.scss */
 .copyright {
   color: #eee;
 }
 
-/* line 666, ../sass/extra.scss */
+/* line 676, ../sass/extra.scss */
 .tabsA a, .tabsC a {
   color: #848daa;
 }
-/* line 669, ../sass/extra.scss */
+/* line 679, ../sass/extra.scss */
 .tabsA .label, .tabsA a.on, .tabsA a:hover, .tabsC .label, .tabsC a.on, .tabsC a:hover {
   color: #646D92;
 }
 
 @media screen and (max-width: 960px) {
-  /* line 675, ../sass/extra.scss */
+  /* line 685, ../sass/extra.scss */
   #homeButton {
     background: none;
   }
