--- a/wikiedu/media/style/extra.css
+++ b/wikiedu/media/style/extra.css
@@ -252,7 +252,7 @@ body.legacy-post {
 #userToolsNav #signin-form input {
   color: #dadada !important;
   text-decoration: underline !important;
-  border: none;
+  border: none !important;
   padding: 0;
   margin-top: -1px;
 }
